--- a/index.html
+++ b/index.html
@@ -180,29 +180,37 @@
             <i class="fa-solid fa-envelope"></i>
             <p>Email</p>
           </a>
-          <!-- Social media -->
-          <a id="profile-link" href="https://www.freecodecamp.org/XimenaMael99" target="_blank" rel="noreferrer" class="btn contact-details">
-            <!-- icon -->
-            <i class="fa-brands fa-free-code-camp"></i>
-            <p>freeCodeCamp</p>
-          </a>
-          <!-- Social media -->
-          <a href="https://www.credly.com/users/ximena-toledo-rivera/badges" target="_blank" rel="noreferrer" class="btn contact-details">
-            <!-- icon -->
-            <i class="fa-solid fa-id-badge"></i>
-            <p>Credly</p>
-          </a>
-          <a href="https://learn.microsoft.com/es-mx/users/ximenatoledo-99/" target="_blank" rel="noreferrer" class="btn contact-details">
-            <!-- icon -->
-            <i class="fa-brands fa-microsoft"></i>
-            <p>Microsoft Learn</p>
-          </a>
         </div>
       </section>
     </main>
     
-    <footer>
-      <p>&copy Created by <a href="index.html" class="cr-footer">PinkHat.</a></p>
+    <footer class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="footer-col footer-logo">
+            <p>&copy Created by <a href="index.html" class="cr-footer">PinkHat.</a></p>
+          </div>
+          <div class="footer-col">
+            <h3>Academic Profiles</h3>
+            <ul>
+              <li><a id="profile-link" href="https://www.freecodecamp.org/XimenaMael99" target="_blank" rel="noreferrer" class="btn contact-details">freeCodeCamp</a></li>
+            </ul>
+            <ul>
+              <li><a href="https://learn.microsoft.com/es-mx/users/ximenatoledo-99/" target="_blank" rel="noreferrer" class="btn contact-details">Microsoft Learn</a></li>
+            </ul>
+            <ul>
+              <li><a href="https://www.coursera.org/user/b785740e454f44a3ef93698e789e15bf" target="_blank" rel="noreferrer" class="btn contact-details">Coursera</a></li>
+            </ul>
+            <ul>
+              <li><a href="https://www.credly.com/users/ximena-toledo-rivera/badges" target="_blank" rel="noreferrer" class="btn contact-details">Credly</a></li>
+            </ul>
+            <ul>
+              <li><a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer" class="btn contact-details">Alura</a></li>
+            </ul>
+          </div>
+          
+        </div>
+      </div>
     </footer>
   </body>
 </html>
