Welcome section updated

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <!-- Welcome section -->
       <section id="welcome-section" class="welcome-section">
         <h1>Hey! I am Ximena</h1>
-        <h2>Designer + Developer</h2>
+        <h2>Engineer + Designer + Developer</h2>
       </section> 
 
       <section id="about" class="about-section">
