--- a/cv.html
+++ b/cv.html
@@ -8,8 +8,7 @@
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Karla&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="img/pinkhat.png" />
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   </head>
   <body>
     <!-- Menu -->
@@ -17,7 +16,6 @@
       <section class="profile-sec">
         <header>
           <h1>Ximena Toledo</h1>
-          <img src="https://avatars.githubusercontent.com/u/85806922?v=4" loading="lazy" class="profile-img"/>
         </header>
       </section>
       <ul>
