Footer Links added

--- a/index.html
+++ b/index.html
@@ -193,19 +193,19 @@
           <div class="footer-col">
             <h3>Academic Profiles</h3>
             <ul>
-              <li><a id="profile-link" href="https://www.freecodecamp.org/XimenaMael99" target="_blank" rel="noreferrer" class="btn contact-details">freeCodeCamp</a></li>
+              <li><a class="footer-link" href="https://www.freecodecamp.org/XimenaMael99" target="_blank" rel="noreferrer" class="btn contact-details">freeCodeCamp</a></li>
             </ul>
             <ul>
-              <li><a href="https://learn.microsoft.com/es-mx/users/ximenatoledo-99/" target="_blank" rel="noreferrer" class="btn contact-details">Microsoft Learn</a></li>
+              <li><a class="footer-link" href="https://learn.microsoft.com/es-mx/users/ximenatoledo-99/" target="_blank" rel="noreferrer" class="btn contact-details">Microsoft Learn</a></li>
             </ul>
             <ul>
-              <li><a href="https://www.coursera.org/user/b785740e454f44a3ef93698e789e15bf" target="_blank" rel="noreferrer" class="btn contact-details">Coursera</a></li>
+              <li><a class="footer-link" href="https://www.coursera.org/user/b785740e454f44a3ef93698e789e15bf" target="_blank" rel="noreferrer" class="btn contact-details">Coursera</a></li>
             </ul>
             <ul>
-              <li><a href="https://www.credly.com/users/ximena-toledo-rivera/badges" target="_blank" rel="noreferrer" class="btn contact-details">Credly</a></li>
+              <li><a class="footer-link" href="https://www.credly.com/users/ximena-toledo-rivera/badges" target="_blank" rel="noreferrer" class="btn contact-details">Credly</a></li>
             </ul>
             <ul>
-              <li><a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer" class="btn contact-details">Alura</a></li>
+              <li><a class="footer-link" href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer" class="btn contact-details">Alura</a></li>
             </ul>
           </div>
           
