certification img fixed

--- a/cv.html
+++ b/cv.html
@@ -170,7 +170,7 @@
           </ul>
           
           <section class="main-section" id="">
-            <h2>Skills Overview</h2>
+            <h2>Certifications Overview</h2>
             <img src="img/T.png" loading="lazy" class="sec-img"/>
         </section>
 
