--- a/cv.html
+++ b/cv.html
@@ -69,7 +69,12 @@
         <header>
           <h2>Certifications</h2>
         </header>
-        
+
+          <h3>IT Support</h3>
+          <ul>
+            <li>Technical Support Basics Certification issued by <a href="https://coursera.org/share/4729881f781844bc0bd6203823a4ab24" target="_blank" rel="noreferrer">Google</a></li>
+          </ul>
+
           <h3>Web Development</h3>
           <ul>
             <li>Web Development Fundamentals Certification issued by Instituto de Economía internacional at University of Alicante (IEI).</li>
