--- a/cv.html
+++ b/cv.html
@@ -73,6 +73,7 @@
           <h3>IT Support</h3>
           <ul>
             <li>Technical Support Basics Certification issued by <a href="https://coursera.org/share/4729881f781844bc0bd6203823a4ab24" target="_blank" rel="noreferrer">Google</a></li>
+            <li>The bits and bytes of computer networks Certification issued by <a href="https://coursera.org/share/bacd3915555d3ad706e6a745763a00b5" target="_blank" rel="noreferrer">Google</a></li>
           </ul>
 
           <h3>Web Development</h3>
