freeCodeCamp Profile updated

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
           <div class="footer-col">
             <h3>Academic Profiles</h3>
             <ul>
-              <li><a class="footer-link" href="https://www.freecodecamp.org/XimenaMael99" target="_blank" rel="noreferrer" class="btn contact-details">freeCodeCamp</a></li>
+              <li><a class="footer-link" href="https://www.freecodecamp.org/PinkHat" target="_blank" rel="noreferrer" class="btn contact-details">freeCodeCamp</a></li>
             </ul>
             <ul>
               <li><a class="footer-link" href="https://learn.microsoft.com/es-mx/users/ximenatoledo-99/" target="_blank" rel="noreferrer" class="btn contact-details">Microsoft Learn</a></li>
