Cv updated - New Cybersecurity  Credential Added

--- a/cv.html
+++ b/cv.html
@@ -137,6 +137,7 @@
             <li>Ethical Hacking edition 1 issued by <a href="https://verified.sertifier.com/en/verify/36463906518332?ref=email" target="_blank" rel="noreferrer">Hacker Mentor</a></li>
             <li>Ethical Hacking edition 2 issued by <a href="https://verified.sertifier.com/en/verify/36463906518332?ref=email" target="_blank" rel="noreferrer">Hacker Mentor</a></li>
             <li>Ethical Hacking edition 3 issued by <a href="https://verified.sertifier.com/en/verify/38669668958764/?ref=email" target="_blank" rel="noreferrer">Hacker Mentor</a></li>
+            <li>Free Ethical Hacking Gamified Course HACKLAB issued by <a href="https://credsverse.com/credentials/3a48f680-d6f2-4e5a-b947-7d381368555b" target="_blank" rel="noreferrer">Hacker Mentor</a></li>
           </ul>
 
           <h3>Finance</h3>
