Personal Profile added

--- a/index.html
+++ b/index.html
@@ -207,6 +207,10 @@
             <ul>
               <li><a class="footer-link" href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer" class="btn contact-details">Alura</a></li>
             </ul>
+            <h3>Personal profile</h3>
+            <ul>
+              <li><a class="footer-link" href="https://bento.me/pinkhat" target="_blank" rel="noreferrer" class="btn contact-details">Bento</a></li>
+            </ul>
           </div>
           
         </div>
