--- a/cv.html
+++ b/cv.html
@@ -74,6 +74,7 @@
           <ul>
             <li>Technical Support Basics Certification issued by <a href="https://coursera.org/share/4729881f781844bc0bd6203823a4ab24" target="_blank" rel="noreferrer">Google</a></li>
             <li>The bits and bytes of computer networks Certification issued by <a href="https://coursera.org/share/bacd3915555d3ad706e6a745763a00b5" target="_blank" rel="noreferrer">Google</a></li>
+            <li>Operating Systems and You: Becoming a Power User     Certification issued by <a href="https://www.coursera.org/account/accomplishments/certificate/95LYQZNNTYKC" target="_blank" rel="noreferrer">Google</a></li>
           </ul>
 
           <h3>Web Development</h3>
