--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Karla&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,900&display=swap" rel="stylesheet">
     <!-- Icons -->
     <script src="https://kit.fontawesome.com/9c48faf641.js" crossorigin="anonymous"></script>
-    <link rel="shortcut icon" href="img/pinkhat.png" />
+    <link rel="shortcut icon" href="img/MyLogo.png" />
   </head>
   <body>
     <main>
@@ -19,11 +19,6 @@
       <!-- Nav section -->
       <nav id="navbar" class="nav">
       <!-- List section -->
-         <div>
-          <a href="index.html">
-            <img  src="img/logo.png"/>
-          </a>
-        </div>
         <ul class="nav-list">
           <li>
             <a href="#about">About</a>
@@ -43,15 +38,15 @@
 
       <!-- Welcome section -->
       <section id="welcome-section" class="welcome-section">
-        <h1>Hey! I am Ximena</h1>
-        <h2>Engineer + Designer + Developer</h2>
+        <h1>Hi! I am Ximena</h1>
+        <h2>Designer + Developer</h2>
       </section> 
 
       <section id="about" class="about-section">
         <div class="about-container">
           <div class="items-container">
             <h2>About me</h2>
-            <p>Hello! I'm Ximena Toledo, PinkHat's owner, a Computer Engineer, and I have excelled as a Junior Researcher in the Institutional Research Training Program (PIFI). Throughout my academic journey, I've gained experience in the field of technology as an Installation and Repair Technician for Computer Equipment, as well as in data network design and IT solutions.</p>
+            <p>Hello! I'm Ximena Toledo, PinkHat's owner, a Computer Engineer. Throughout my academic journey, I've gained experience in the field of technology as an Installation and Repair Technician for Computer Equipment, as well as data network design and IT solutions.</p>
             <br>
             <p>My quest for knowledge has led me to obtain a series of certifications, including Web Development, Mobile Development, UX Design, Digital Marketing, Cybersecurity and Networks, IT Support, Finance, Cloud Computing, Databases, Data Science, and even Quantum Computing. I am committed to continuous learning and applying my skills to interesting projects.</p>
             <a href="cv.html" target="_blank" rel="noreferrer" class="btn-1">Show CV</a>
