--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <p>Hello! I'm Ximena Toledo, PinkHat's owner, a Computer Engineer. Throughout my academic journey, I've gained experience in the field of technology as an Installation and Repair Technician for Computer Equipment, as well as data network design and IT solutions.</p>
             <br>
             <p>My quest for knowledge has led me to obtain a series of certifications, including Web Development, Mobile Development, UX Design, Digital Marketing, Cybersecurity and Networks, IT Support, Finance, Cloud Computing, Databases, Data Science, and even Quantum Computing. I am committed to continuous learning and applying my skills to interesting projects.</p>
-            <a href="cv.html" target="_blank" rel="noreferrer" class="btn-1">Show CV</a>
+            <a href="cv.html" target="_blank" rel="noreferrer" class="btn-1 about-btn">Show CV</a>
           </div>
         </div>
         
