--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="about-container">
           <div class="items-container">
             <h2>About me</h2>
-            <p>I'm Ximena Toledo, PinkHat's owner, a computer engineer. Throughout my academic journey, I've gained experience in the field of technology as an Installation and Repair Technician for Computer Equipment, as well as data network design and IT solutions. My quest for knowledge has led me to obtain a series of certifications, including Web Development, Mobile Development, UX Design, Digital Marketing, Cybersecurity and Networks, IT Support, Finance, Cloud Computing, Databases, Data Science, and even Quantum Computing. I am committed to continuous learning and applying my skills to interesting projects.</p>
+            <p>I am Ximena Toledo, PinkHat's owner, a computer engineer. Throughout my academic journey, I've gained experience in the field of technology as an Installation and Repair Technician for Computer Equipment, as well as data network design and IT solutions. My quest for knowledge has led me to obtain a series of certifications, including Web Development, Mobile Development, UX Design, Digital Marketing, Cybersecurity and Networks, IT Support, Finance, Cloud Computing, Databases, Data Science, and even Quantum Computing. I am committed to continuous learning and applying my skills to interesting projects.</p>
             <a href="cv.html" target="_blank" rel="noreferrer" class="btn-1 about-btn">Show CV</a>
           </div>
         </div>
@@ -60,73 +60,73 @@
       <div class="projects-grid">
 
         <a href="https://azriel1909.github.io/UX-PINK-CASE-STUDY-3/" target="_blank" rel="noreferrer" class="project project-tile">
-          <img src="https://images.unsplash.com/photo-1578401057158-0e58789f5947?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1074&q=80" alt="UX project: GymTraini " loading="lazy" class="project-img"/>
+          <img src="https://images.unsplash.com/photo-1651164653520-010c766aebf1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1032&q=80" alt="UX project: Brainly Health" loading="lazy" class="project-img"/>
           <p class="project-title">UX project: Brainly Health Website and
             Mobile Design</p>
         </a>
 
         <a href="https://azriel1909.github.io/UX-PINK-CASE-STUDY-2/" target="_blank" rel="noreferrer" class="project project-tile">
-          <img src="https://images.unsplash.com/photo-1576153192396-180ecef2a715?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1074&q=80" alt="UX project: GymTraini " loading="lazy" class="project-img"/>
+          <img src="https://images.unsplash.com/photo-1656618724305-a4257e46e847?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1032&q=80" alt="UX project: Wabibyte" loading="lazy" class="project-img"/>
           <p class="project-title">UX project: WabiByte Website Design</p>
         </a>
         <!-- Project section 1 -->
         <a href="https://azriel1909.github.io/UX-PINK-CASE-STUDY/" target="_blank" rel="noreferrer" class="project project-tile">
-          <img src="https://images.unsplash.com/photo-1531403009284-440f080d1e12?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="UX project: GymTraini " loading="lazy"class="project-img"/>
+          <img src="https://images.unsplash.com/photo-1658863025658-4a259cc68fc9?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1025&q=80" alt="UX project: GymTraini " loading="lazy"class="project-img"/>
           <p class="project-title">UX project: GymTraini</p>
         </a>
         <!-- Project section 1 -->
         <a href="https://azriel1909.github.io/PINK-PRODUCT-PAGE/" target="_blank" rel="noreferrer" class="project project-tile">
-          <img src="https://images.unsplash.com/photo-1463171379579-3fdfb86d6285?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="Project: product page " loading="lazy"class="project-img"/>
+          <img src="https://images.unsplash.com/photo-1526572195979-0f8a7ea44489?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=987&q=80" alt="Project: product page " loading="lazy"class="project-img"/>
           <p class="project-title">Product Landing Page</p>
         </a>
         <!-- Project section 2 -->
         <a href="https://azriel1909.github.io/TODO-PINK-2/" target="_blank" rel="noreferrer" class="project project-tile">
-          <img src="https://images.unsplash.com/photo-1606327054629-64c8b0fd6e4f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="Project: TODO list" loading="lazy"class="project-img"/>
+          <img src="https://images.unsplash.com/photo-1598791318878-10e76d178023?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=870&q=80" alt="Project: TODO list" loading="lazy"class="project-img"/>
           <p class="project-title">TODO List Page</p>
         </a>
         <!-- Project section 3 -->
         <a href="https://azriel1909.github.io/TECHNICAL-DOCU/" target="_blank" rel="noreferrer" class="project project-tile">
-          <img src="https://images.unsplash.com/photo-1619418602850-35ad20aa1700?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80" alt="Project: " loading="lazy"class="project-img"/>
+          <img src="https://images.unsplash.com/photo-1587116987928-21e47bd76cd2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=870&q=80" alt="Project: " loading="lazy"class="project-img"/>
           <p class="project-title">Technical Documentation Page</p>
         </a>
         <!-- Project section 4 -->
         <a href="https://azriel1909.github.io/PINK-MEGAZINE/" target="_blank" rel="noreferrer" class="project project-tile">
-          <img src="https://images.unsplash.com/photo-1519993443254-e135c95cdea0?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="Product: Magazine Design" loading="lazy" class="project-img"/>
+          <img src="https://images.unsplash.com/photo-1598027097863-319c291951a5?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=872&q=80" alt="Product: Magazine Design" loading="lazy" class="project-img"/>
           <p class="project-title">Magazine Design</p>
         </a>
         <!-- Project section 5 -->
         <a href="https://azriel1909.github.io/RETO-PINKHANG/" target="_blank" rel="noreferrer" class="project project-tile">
-          <img src="https://images.unsplash.com/photo-1611996575749-79a3a250f948?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="Product: HangMan Game" loading="lazy" class="project-img"/>
+          <img src="https://images.unsplash.com/photo-1593791718814-b720d7979607?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1074&q=80" alt="Product: HangMan Game" loading="lazy" class="project-img"/>
           <p class="project-title">HangMan Game</p>
         </a>
         <!-- Project section 6 -->
         <a href="https://azriel1909.github.io/PINK-CITY-MODEL/" target="_blank" rel="noreferrer" class="project project-tile">
-          <img src="https://images.unsplash.com/photo-1523540383849-4ae4125acd6f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="Product: City Model" loading="lazy" class="project-img"/>
+          <img src="https://images.unsplash.com/photo-1579032320705-b5777e7b91ae?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=928&q=80" alt="Product: City Model" loading="lazy" class="project-img"/>
           <p class="project-title">City Model</p>
         </a>
         <!-- Project section 7 -->
         <a href="https://azriel1909.github.io/KAFFEE-PROJECT/" target="_blank" rel="noreferrer" class="project project-tile">
-          <img src="https://images.unsplash.com/photo-1495474472287-4d71bcdd2085?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OHx8Y29mZmV8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt="Product: Pink Coffee Shop" loading="lazy" class="project-img"/>
+          <img src="https://images.unsplash.com/photo-1542372147193-a7aca54189cd?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=987&q=80" alt="Product: Pink Coffee Shop" loading="lazy" class="project-img"/>
           <p class="project-title">Pink Coffee Shop</p>
         </a>
         <!-- Project section 8 -->
         <a href="https://azriel1909.github.io/BALANCE-PINK-SHEET/" target="_blank" rel="noreferrer" class="project project-tile">
-          <img src="https://images.unsplash.com/photo-1611974789855-9c2a0a7236a3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="Product: Balance Sheet" loading="lazy" class="project-img"/>
+          <img src="https://images.unsplash.com/photo-1518186285589-2f7649de83e0?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1074&q=80" alt="Product: Balance Sheet" loading="lazy" class="project-img"/>
           <p class="project-title">Balance Sheet</p>
         </a>
         <!-- Project section 9 -->
         <a href="https://azriel1909.github.io/PINK-FORMULAR/" target="_blank" rel="noreferrer" class="project project-tile">
-          <img src="https://images.unsplash.com/photo-1588702547919-26089e690ecc?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="Product: Registration Form" loading="lazy" class="project-img"/>
+          <img src="https://images.unsplash.com/photo-1588702547923-7093a6c3ba33?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=870&q=80" alt="Product: Registration Form" loading="lazy" class="project-img"/>
           <p class="project-title">Registration Form</p>
         </a>
         <!-- Project section 10 -->
         <a href="https://azriel1909.github.io/LAYOUTS-CSS/" target="_blank" rel="noreferrer" class="project project-tile">
-          <img src="https://images.unsplash.com/photo-1487014679447-9f8336841d58?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1005&q=80" alt="Product: Product Landing Page" loading="lazy" class="project-img"/>
+          <img src="https://images.unsplash.com/photo-1507238691740-187a5b1d37b8?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=910&q=80" alt="Product: Product Landing Page" loading="lazy" class="project-img"/>
           <p class="project-title">Product Landing Page</p>
         </a>
         <!-- Project section 11 -->
         <a href="https://azriel1909.github.io/TRIBUTE-PAGE-FLAMINGOS/" target="_blank" rel="noreferrer" class="project project-tile">
-          <img src="https://images.unsplash.com/photo-1488137881216-5bea4b9bac2b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1144&q=80" alt="Product: Description Page" loading="lazy" class="project-img"/>
+          <img src="https://images.unsplash.com/photo-1569775931713-52512a1f1b96?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=987&q=80" alt="Product: Description Page" loading="lazy" class="project-img"/>
           <p class="project-title">Description Page</p>
         </a>
         <!-- Project section 12 -->
@@ -136,7 +136,7 @@
         </a>
         <!-- Project section 13 -->
         <a href="https://azriel1909.github.io/GATITOO/" target="_blank" rel="noreferrer" class="project project-tile">
-          <img src="https://images.unsplash.com/photo-1668901382969-8c73e450a1f5?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80" alt="Product: Tic Tac Toe Game" loading="lazy" class="project-img"/>
+          <img src="https://images.unsplash.com/photo-1600224374823-211f85c16521?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=861&q=80" alt="Product: Tic Tac Toe Game" loading="lazy" class="project-img"/>
           <p class="project-title">Tic Tac Toe Game</p>
         </a>
       </div>
