--- a/cv.html
+++ b/cv.html
@@ -70,7 +70,6 @@
         <header>
           <h2>Certifications</h2>
         </header>
-
           <h3>IT Support</h3>
           <ul>
             <li>Technical Support Basics Certification issued by <a href="https://coursera.org/share/4729881f781844bc0bd6203823a4ab24" target="_blank" rel="noreferrer">Google</a></li>
@@ -176,12 +175,13 @@
           <ul>
             <li>Fundamentals of Quantum Computing issued by <a href="https://www.credly.com/badges/449019b3-ceba-41d4-96c6-797177b294e0/public_url" target="_blank" rel="noreferrer">The Linux Foundation</a>.</li>
             <li>Quantum Winter School with Microsoft Azure Quantum issued by Microsoft and <a href="https://www.credly.com/badges/27379115-7062-4239-a3da-21825b23287e/public_url" target="_blank" rel="noreferrer">Qubit x Qubit.</a></li>
-          </ul>
-          
-          <section class="main-section" id="">
-            <h2>Certifications Overview</h2>
-            <img src="img/T.png" loading="lazy" class="sec-img"/>
+          </ul>            
         </section>
+
+      <section class="main-section">
+        <h2>Skills Overview</h2>
+        <img src="img/T.png" loading="lazy" class="img-section"/>
+      </section>
 
       </section>
       <!-- End Part 2 -->
