--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
       <div class="container">
         <div class="row">
           <div class="footer-col footer-logo">
-            <p>&copy Created by <a href="index.html" class="cr-footer">PinkHat</a></p>
+            <p>&copy Created by <a href="index.html" class="cr-footer">Pink<strong>Hat</strong></a></p>
           </div>
           <div class="footer-col">
             <h3>Academic Profiles</h3>
