Contact Information Updated

--- a/cv.html
+++ b/cv.html
@@ -331,7 +331,7 @@
               Website: <a href="index.html" target="_blank" rel="noreferrer">PinkHat 2023</a>
             </li>
             <li>
-              Email: <a href="mailto:xtoledori@gmail.com?Subject=Quiero contactar contigo." target="_blank" rel="noreferrer">xtoledori@gmail.com
+              Email: <a href="mailto:pinkhat.connect@gmail.com?Subject=Quiero contactar contigo." target="_blank" rel="noreferrer">pinkhat.connect@gmail.com
               </a>
             </li>
             <li>
