--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <p>LinkedIn</p>
           </a>
           <!-- Social media -->
-          <a href="https://youtube.com/@toledoriveraximena2990" target="_blank" rel="noreferrer" class="btn contact-details">
+          <a href="https://youtube.com/@ximenatoledorivera?si=--iF4gSwkY40hEqz" target="_blank" rel="noreferrer" class="btn contact-details">
             <!-- icon -->
             <i class="fa-brands fa-youtube"></i>
             <p>YouTube</p>
@@ -168,7 +168,7 @@
             <p>GitHub</p>
           </a>
           <!-- Social media -->
-          <a href="mailto:xtoledori@gmail.com?Subject=Quiero contactar contigo." target="_blank" rel="noreferrer" class="btn contact-details">
+          <a href="mailto:pinkhat.connect@gmail.com?Subject=Quiero contactar contigo." target="_blank" rel="noreferrer" class="btn contact-details">
             <!-- icon -->
             <i class="fa-solid fa-envelope"></i>
             <p>Email</p>
