--- a/cv.html
+++ b/cv.html
@@ -49,6 +49,25 @@
     </nav>
     <!-- End Menu -->
     <main id="main-doc" class="main-doc">
+
+      <section class="main-section" id="Contact">
+        <header>
+          <h2>Contact</h2>
+        </header>
+          <ul>
+            <li>
+              Name: Ximena Toledo Rivera
+            </li>
+            <li>
+              Email: <a href="mailto:pinkhat.connect@gmail.com?Subject=Quiero contactar contigo." target="_blank" rel="noreferrer">pinkhat.connect@gmail.com
+              </a>
+            </li>
+            <li>
+              Website: <a href="index.html" target="_blank" rel="noreferrer">PinkHat.com</a>
+            </li>
+          </ul>
+          <p>Last updated on October 1, 2023</p>
+      </section> 
     
       <!-- Part 1 -->
       <section class="main-section" id="academic-path">
@@ -322,24 +341,7 @@
           </ul>
       </section>
       <!-- End Part 7 -->
-      <section class="main-section" id="Contact">
-        <header>
-          <h2>Contact</h2>
-        </header>
-          <ul>
-            <li>
-              Website: <a href="index.html" target="_blank" rel="noreferrer">PinkHat 2023</a>
-            </li>
-            <li>
-              Email: <a href="mailto:pinkhat.connect@gmail.com?Subject=Quiero contactar contigo." target="_blank" rel="noreferrer">pinkhat.connect@gmail.com
-              </a>
-            </li>
-            <li>
-              LinkedIn: <a href="https://www.linkedin.com/in/ximena-toledo-dev99/" target="_blank" rel="noreferrer">Ximena Toledo
-              </a>
-            </li>
-          </ul>
-      </section> 
+      
     </main>
   </body>
 </html>
