--- a/cv.html
+++ b/cv.html
@@ -22,10 +22,13 @@
       </section>
       <ul>
         <li>
-          <a class="nav-link" href="#academic-path">Academic Path</a>
+          <a class="nav-link" href="#Contact">Contact</a>
         </li>
         <li>
-          <a class="nav-link" href="#certifications">Certifications</a>
+          <a class="nav-link" href="#Education">Education</a>
+        </li>
+        <li>
+          <a class="nav-link" href="#Certifications">Certifications</a>
         </li>
         <li>
           <a class="nav-link" href="#languages">Languages</a>
@@ -42,14 +45,12 @@
         <li>
           <a class="nav-link" href="#additional-activities">Additional Activities</a>
         </li>
-        <li>
-          <a class="nav-link" href="#Contact">Contact</a>
-        </li>
       </ul>
     </nav>
     <!-- End Menu -->
     <main id="main-doc" class="main-doc">
 
+      <!-- Part 1 -->
       <section class="main-section" id="Contact">
         <header>
           <h2>Contact</h2>
@@ -68,29 +69,31 @@
           </ul>
           <p>Last updated on October 1, 2023</p>
       </section> 
+      <!-- End of Part 1 -->
     
-      <!-- Part 1 -->
-      <section class="main-section" id="academic-path">
+      <!-- Part 2 -->
+      <section class="main-section" id="Education">
         <header>
-          <h2>Academic Path</h2>
+          <h2>Education</h2>
         </header>
           <ul>
-            <li>2019 - 2023: <strong>Computer Engineering</strong> at The National Polytechnic Institute of Mexico (IPN).</li>
-            <li>2020 - today: <strong>Junior Researcher</strong> at The Institutional Research Training Program at The National Polytechnic Institute of Mexico (BEIFI).</li>
-            <li><strong>Installation and Repair Technician Computer Equipment</strong> at INTTELMEX</li>
-            <li><strong>Technician in Data Networks</strong> at INTTELMEX.</li>
-            <li><strong>Finder</strong> at INTTELMEX.</li>
-            <li><strong>IT Technician</strong> at INTTELMEX.</li>
+            <li><strong>Instituto Politécnico Nacional</strong>, Mexico, CDMX <br> Computer Engineering</li>
+            <li><strong>Instituto Politécnico Nacional</strong>, Mexico, CDMX <br>Beca de Estímulo Institucional de Formación de Investigadores<br>Junior Researcher</li>
           </ul>
       </section>
-      <!-- End Part 1 -->
-      <!-- Part 2 -->
-      <section class="main-section" id="certifications">
+      <!-- End of Part 2 -->
+
+      <!-- Part 3 -->
+      <section class="main-section" id="Certifications">
         <header>
           <h2>Certifications</h2>
         </header>
           <h3>IT Support</h3>
           <ul>
+            <li>
+              Data Network Technician, Instituto Tecnológico de Teléfonos de México - February 2021
+            </li>
+            
             <li>Technical Support Basics Certification issued by <a href="https://coursera.org/share/4729881f781844bc0bd6203823a4ab24" target="_blank" rel="noreferrer">Google</a></li>
             <li>The bits and bytes of computer networks Certification issued by <a href="https://coursera.org/share/bacd3915555d3ad706e6a745763a00b5" target="_blank" rel="noreferrer">Google</a></li>
             <li>Operating Systems and You: Becoming a Power User     Certification issued by <a href="https://www.coursera.org/account/accomplishments/certificate/95LYQZNNTYKC" target="_blank" rel="noreferrer">Google</a></li>
