--- a/cv.html
+++ b/cv.html
@@ -88,36 +88,72 @@
         <header>
           <h2>Certifications</h2>
         </header>
+
+        <h3>Mobile Development</h3>
+          <ul>
+            <li>
+              <a href="https://skillshop.exceedlms.com/student/award/ktThwyEZhDjWXGx3HFXkJRcb" target="_blank" rel="noreferrer">Mobile App Development</a>, Google, May 2021
+            </li>
+          </ul>
+
           <h3>IT Support</h3>
           <ul>
             <li>
-              Data Network Technician, Instituto Tecnológico de Teléfonos de México - February 2021
+              <a href="https://capacitateparaelempleo.org/verifica/657bc949-6e80-4bda-8f1a-34f781bf3e97/0f75e561-0150-4b89-b099-f67f2b4ca90a" target="_blank" rel="noreferrer">Data Network Technician</a>, Instituto Tecnológico de Teléfonos de México, February 2021
             </li>
-            
-            <li>Technical Support Basics Certification issued by <a href="https://coursera.org/share/4729881f781844bc0bd6203823a4ab24" target="_blank" rel="noreferrer">Google</a></li>
-            <li>The bits and bytes of computer networks Certification issued by <a href="https://coursera.org/share/bacd3915555d3ad706e6a745763a00b5" target="_blank" rel="noreferrer">Google</a></li>
-            <li>Operating Systems and You: Becoming a Power User     Certification issued by <a href="https://www.coursera.org/account/accomplishments/certificate/95LYQZNNTYKC" target="_blank" rel="noreferrer">Google</a></li>
+            <li>
+              <a href="https://capacitateparaelempleo.org/verifica/657bc949-6e80-4bda-8f1a-34f781bf3e97/c00a7970-0d0d-4245-abc5-9f4683845182" target="_blank" rel="noreferrer">Finder</a>, Instituto Tecnológico de Teléfonos de México, February 2021
+            </li>
+            <li>
+              <a href="https://capacitateparaelempleo.org/verifica/657bc949-6e80-4bda-8f1a-34f781bf3e97/d76a815d-ccea-495a-9a71-3b5a775f4578" target="_blank" rel="noreferrer">Technician in Installation of Computer Equipment</a>, Instituto Tecnológico de Teléfonos de México, February 2021
+            </li>
+            <li>
+              <a href="https://capacitateparaelempleo.org/verifica/657bc949-6e80-4bda-8f1a-34f781bf3e97/ca369340-943f-4269-b38f-472f74803782" target="_blank" rel="noreferrer">Computer Technician (Office automation)</a>, Instituto Tecnológico de Teléfonos de México, February 2021
+            </li>
+            <li>
+              <a href="https://coursera.org/share/4729881f781844bc0bd6203823a4ab24" target="_blank" rel="noreferrer">Technical Support Basics</a>, Google, June 2023
+            </li>
+            <li>
+              <a href="https://coursera.org/share/bacd3915555d3ad706e6a745763a00b5" target="_blank" rel="noreferrer">The bits and bytes of computer networks</a>, Google, July 2023
+            </li>
+            <li>
+              <a href="https://coursera.org/share/dc19321bb2d78e2fd6093539bc057850" target="_blank" rel="noreferrer">Operating Systems and You: Becoming a Power User</a>, Google, September 2023
+            </li>
           </ul>
 
           <h3>Web Development</h3>
           <ul>
-            <li>Web Development Fundamentals Certification issued by Instituto de Economía internacional at University of Alicante (IEI).</li>
-            <li>Beginner in Programming Certification issued by <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">Alura and Oracle</a></li>
-            <li>FrontEnd Development Certification issued by <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">Alura and Oracle</a></li>
-            <li>Responsive Web Design Certification issued by <a href="https://www.freecodecamp.org/XimenaMael99" target="_blank" rel="noreferrer">freeCodeCamp</a></li>
+            <li>
+              <a href="https://skillshop.exceedlms.com/student/award/p9vYFZbNdtT2QnDZzPxYD3t5" target="_blank" rel="noreferrer">Web Development Fundamentals: HTML and CSS</a>, Google, June 2021
+            </li>
+            <li>
+              <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">G3 Programming Beginner</a>, Alura & Oracle Next Education, August 2022
+            </li>
+            <li>
+              <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">G3 Front End</a>, Alura & Oracle Next Education, December 2022
+            </li>
+            <li>
+              <a href="https://www.freecodecamp.org/certification/PinkHat/responsive-web-design" target="_blank" rel="noreferrer">Responsive Web Design</a>, freeCodeCamp, January 2023
+            </li>
           </ul>
 
           <h3>Soft Skills</h3>
           <ul>
-            <li>Training Personal Development Certification issued by <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">Alura and Oracle</a></li>
-            <li>Business Agility Certification issued by <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">Alura and Oracle</a></li>
-            <li>Entrepreneurship Certification issued by <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">Alura and Oracle</a></li>
+            <li>
+              <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">G3 Personal Development</a>, Alura & Oracle Next Education, July 2022
+            </li>
+            <li>
+              <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">G3 Business Agility</a>, Alura & Oracle Next Education, December 2022
+            </li>
+            <li>
+              <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">G3 Entrepreneurship</a>, Alura & Oracle Next Education, February 2023
+            </li>
+            <li>
+              <a href="https://courses.edx.org/certificates/a475a61c43f549ff96ea5fb74b8be79a" target="_blank" rel="noreferrer">Introduction to Emotional Intelligence</a>, Red de Universidades Anáhuac, September 2023
+            </li>
           </ul>
 
-          <h3>Mobile Development</h3>
-          <ul>
-            <li>The Development of Mobile Apps Certification issued by the Complutense University of Madrid.</li>
-          </ul>
+          
 
           <h3>UX Design</h3>
           <ul>
