--- a/cv.html
+++ b/cv.html
@@ -153,35 +153,39 @@
             </li>
           </ul>
 
-          
-
           <h3>UX Design</h3>
           <ul>
-
-            <li>Basics of user experience design Certification issued by Google <a href="https://www.coursera.org/account/accomplishments/verify/RHMZR2TPCN8T" target="_blank" rel="noreferrer">issued by Google</a>.</li>
-
-            <li>First steps in the UX design process: Empathize, define and ideate Certification <a href="https://www.coursera.org/account/accomplishments/verify/J3NRE3D7CMZY" target="_blank" rel="noreferrer">issued by Google</a>.</li>
-            
-            <li>Create low fidelity page schematics and prototypes Certification <a href="https://www.coursera.org/account/accomplishments/verify/LA22LNEPGFFK" target="_blank" rel="noreferrer">issued by Google</a>.</li>
-
-            <li>Conduct UX research <a href="https://www.coursera.org/account/accomplishments/certificate/SH22U87ZAQVV" target="_blank" rel="noreferrer">issued by Google</a>.</li>
-
-            <li>Create high-fidelity prototypes and designs in Figma <a href="https://www.coursera.org/account/accomplishments/certificate/YACGTYZH46C2" target="_blank" rel="noreferrer">issued by Google</a>.</li>
-
-            <li>Responsive Web Designs in Adobe XD <a href="https://www.coursera.org/account/accomplishments/certificate/ARAGURYP7SKM" target="_blank" rel="noreferrer">issued by Google</a>.</li>
-
-            <li>Design a user experience for a public interest initiative and prepare for work <a href="https://www.coursera.org/account/accomplishments/certificate/7QTLLKU9DGKK" target="_blank" rel="noreferrer">issued by Google</a>.</li>
-
-            <li>Specialized Program - Google User Experience (UX) Design <a href="https://www.coursera.org/account/accomplishments/specialization/7V3V6KP6VN7Y" target="_blank" rel="noreferrer">issued by Google</a>.</li>
-            <li>Color Theory Certification issued by TELMEX.</li>
+            <li>
+              <a href="https://coursera.org/share/bc6b4f61c9e0e7c5c2fb5b0a1951839d" target="_blank" rel="noreferrer">Basics of User Experience Design</a>, Google, August 2022
+            </li>
+            <li>
+              <a href="https://coursera.org/share/28583b51730846c1dcf54affb7a01964" target="_blank" rel="noreferrer">First steps in the UX design process: Empathize, define and ideate</a>, Google, September 2022
+            </li>
+            <li>
+              <a href="https://coursera.org/share/56ee6345b0a9a1fb0451d06d203f0aa8" target="_blank" rel="noreferrer">Create low fidelity page schematics and prototypes</a>, Google, October 2022
+            </li>
+            <li>
+              <a href="https://coursera.org/share/84ca92b9fcce740eac8746d9ffaf8feb" target="_blank" rel="noreferrer">Conduct UX Research</a>, Google, February 2023
+            </li>
+            <li>
+              <a href="https://coursera.org/share/91b8b5122955cf0aa2ce17927d60361f" target="_blank" rel="noreferrer">Create high-fidelity prototypes and designs in Figma</a>, Google, February 2023
+            </li>
+            <li>
+              <a href="https://coursera.org/share/e43329f63c176a00a5150517508973bc" target="_blank" rel="noreferrer">Design a user experience for a public interest initiative and prepare for the job</a>, Google, March 2023
+            </li>
+            <li>
+              <a href="https://coursera.org/share/dca15b48093475c55a5a90a079a46991" target="_blank" rel="noreferrer">Responsive web designs in Adobe XD</a>, Google, March 2023
+            </li>
           </ul>
 
           <h3>Digital Marketing</h3>
           <ul>
-            <li>Digital Marketing Certification issued by The Open University.</li>
-            <li>Google Ads Certification.</li>
-            <li>Google Ads Video Certification.</li>
-            <p>Participation in the digital Marketing Training by Google and JA Americas.</p>
+            <li>
+              <a href="https://skillshop.exceedlms.com/student/award/tf8UuPYX9c3MXGHVcPuH3fAX" target="_blank" rel="noreferrer">Fundamentals of Digital Marketing</a>, Google, June 2021
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/ximena-toledo-dev99/" target="_blank" rel="noreferrer">Digital Marketing & Google Ads</a>, Google & JA Americas, June 2021
+            </li>
           </ul>
 
           <h3>Cybersecurity and Networking</h3>
