--- a/cv.html
+++ b/cv.html
@@ -188,6 +188,16 @@
             </li>
           </ul>
 
+          <h3>Cloud Computing</h3>
+          <ul>
+            <li>
+              <a href="https://skillshop.exceedlms.com/student/award/vDnJvzSMpiavvrFQbhFKdNvw" target="_blank" rel="noreferrer">Cloud Computing</a>, Google, May 2021
+            </li>
+            <li>
+              <a href="https://www.credly.com/badges/7cb187b0-6bba-44fe-8fde-6e1dcf8a18c4/public_url" target="_blank" rel="noreferrer">Azure Fundamentals</a>, Microsoft, January 2022
+            </li>
+          </ul>
+
           <h3>Cybersecurity and Networking</h3>
           <ul>
             <li>Cybersecurity at Work Certification issued by the Institute of Cybersecurity (incibe).</li>
@@ -211,11 +221,7 @@
               <li>Advanced EXCEL Certification issued by TELMEX.</li>
           </ul>
 
-          <h3>Cloud Computing</h3>
-          <ul>
-            <li>Cloud Computing Certification issued by The School of Industrial Organization (EOI).</li>
-            <li>Azure Fundamentals Certification issued by <a href="https://www.credly.com/badges/7cb187b0-6bba-44fe-8fde-6e1dcf8a18c4/public_url" target="_blank" rel="noreferrer">Microsoft</a>.</li>
-          </ul>
+          
 
           <h3>Data Base</h3>
           <ul>
