--- a/cv.html
+++ b/cv.html
@@ -85,96 +85,90 @@
 
       <!-- Part 3 -->
       <section class="main-section" id="Certifications">
+
         <header>
           <h2>Certifications</h2>
         </header>
 
-        <h3>Mobile Development</h3>
-          <ul>
-            <li>
-              <a href="https://skillshop.exceedlms.com/student/award/ktThwyEZhDjWXGx3HFXkJRcb" target="_blank" rel="noreferrer">Mobile App Development</a>, Google, May 2021
-            </li>
-          </ul>
-
           <h3>IT Support</h3>
           <ul>
             <li>
-              <a href="https://capacitateparaelempleo.org/verifica/657bc949-6e80-4bda-8f1a-34f781bf3e97/0f75e561-0150-4b89-b099-f67f2b4ca90a" target="_blank" rel="noreferrer">Data Network Technician</a>, Instituto Tecnológico de Teléfonos de México, February 2021
-            </li>
-            <li>
-              <a href="https://capacitateparaelempleo.org/verifica/657bc949-6e80-4bda-8f1a-34f781bf3e97/c00a7970-0d0d-4245-abc5-9f4683845182" target="_blank" rel="noreferrer">Finder</a>, Instituto Tecnológico de Teléfonos de México, February 2021
-            </li>
-            <li>
-              <a href="https://capacitateparaelempleo.org/verifica/657bc949-6e80-4bda-8f1a-34f781bf3e97/d76a815d-ccea-495a-9a71-3b5a775f4578" target="_blank" rel="noreferrer">Technician in Installation of Computer Equipment</a>, Instituto Tecnológico de Teléfonos de México, February 2021
-            </li>
-            <li>
-              <a href="https://capacitateparaelempleo.org/verifica/657bc949-6e80-4bda-8f1a-34f781bf3e97/ca369340-943f-4269-b38f-472f74803782" target="_blank" rel="noreferrer">Computer Technician (Office automation)</a>, Instituto Tecnológico de Teléfonos de México, February 2021
-            </li>
-            <li>
-              <a href="https://coursera.org/share/4729881f781844bc0bd6203823a4ab24" target="_blank" rel="noreferrer">Technical Support Basics</a>, Google, June 2023
+              <a href="https://coursera.org/share/dc19321bb2d78e2fd6093539bc057850" target="_blank" rel="noreferrer">Operating Systems and You: Becoming a Power User</a>, Google, September 2023
             </li>
             <li>
               <a href="https://coursera.org/share/bacd3915555d3ad706e6a745763a00b5" target="_blank" rel="noreferrer">The bits and bytes of computer networks</a>, Google, July 2023
             </li>
             <li>
-              <a href="https://coursera.org/share/dc19321bb2d78e2fd6093539bc057850" target="_blank" rel="noreferrer">Operating Systems and You: Becoming a Power User</a>, Google, September 2023
+              <a href="https://coursera.org/share/4729881f781844bc0bd6203823a4ab24" target="_blank" rel="noreferrer">Technical Support Basics</a>, Google, June 2023
+            </li>
+            <li>
+              <a href="https://capacitateparaelempleo.org/verifica/657bc949-6e80-4bda-8f1a-34f781bf3e97/ca369340-943f-4269-b38f-472f74803782" target="_blank" rel="noreferrer">Computer Technician (Office automation)</a>, Instituto Tecnológico de Teléfonos de México, February 2021
+            </li>
+            <li>
+              <a href="https://capacitateparaelempleo.org/verifica/657bc949-6e80-4bda-8f1a-34f781bf3e97/d76a815d-ccea-495a-9a71-3b5a775f4578" target="_blank" rel="noreferrer">Technician in Installation of Computer Equipment</a>, Instituto Tecnológico de Teléfonos de México, February 2021
+            </li>
+            <li>
+              <a href="https://capacitateparaelempleo.org/verifica/657bc949-6e80-4bda-8f1a-34f781bf3e97/c00a7970-0d0d-4245-abc5-9f4683845182" target="_blank" rel="noreferrer">Finder</a>, Instituto Tecnológico de Teléfonos de México, February 2021
+            </li>
+            <li>
+              <a href="https://capacitateparaelempleo.org/verifica/657bc949-6e80-4bda-8f1a-34f781bf3e97/0f75e561-0150-4b89-b099-f67f2b4ca90a" target="_blank" rel="noreferrer">Data Network Technician</a>, Instituto Tecnológico de Teléfonos de México, February 2021
             </li>
           </ul>
 
           <h3>Web Development</h3>
-          <ul>
+          <ul>  
             <li>
-              <a href="https://skillshop.exceedlms.com/student/award/p9vYFZbNdtT2QnDZzPxYD3t5" target="_blank" rel="noreferrer">Web Development Fundamentals: HTML and CSS</a>, Google, June 2021
-            </li>
-            <li>
-              <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">G3 Programming Beginner</a>, Alura & Oracle Next Education, August 2022
+              <a href="https://www.freecodecamp.org/certification/PinkHat/responsive-web-design" target="_blank" rel="noreferrer">Responsive Web Design</a>, freeCodeCamp, January 2023
             </li>
             <li>
               <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">G3 Front End</a>, Alura & Oracle Next Education, December 2022
             </li>
             <li>
-              <a href="https://www.freecodecamp.org/certification/PinkHat/responsive-web-design" target="_blank" rel="noreferrer">Responsive Web Design</a>, freeCodeCamp, January 2023
+              <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">G3 Programming Beginner</a>, Alura & Oracle Next Education, August 2022
+            </li>
+            <li>
+              <a href="https://skillshop.exceedlms.com/student/award/p9vYFZbNdtT2QnDZzPxYD3t5" target="_blank" rel="noreferrer">Web Development Fundamentals: HTML and CSS</a>, Google, June 2021
             </li>
           </ul>
 
           <h3>Soft Skills</h3>
           <ul>
             <li>
-              <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">G3 Personal Development</a>, Alura & Oracle Next Education, July 2022
-            </li>
-            <li>
-              <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">G3 Business Agility</a>, Alura & Oracle Next Education, December 2022
+              <a href="https://courses.edx.org/certificates/a475a61c43f549ff96ea5fb74b8be79a" target="_blank" rel="noreferrer">Introduction to Emotional Intelligence</a>, Red de Universidades Anáhuac, September 2023
             </li>
             <li>
               <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">G3 Entrepreneurship</a>, Alura & Oracle Next Education, February 2023
             </li>
             <li>
-              <a href="https://courses.edx.org/certificates/a475a61c43f549ff96ea5fb74b8be79a" target="_blank" rel="noreferrer">Introduction to Emotional Intelligence</a>, Red de Universidades Anáhuac, September 2023
+              <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">G3 Business Agility</a>, Alura & Oracle Next Education, December 2022
+            </li>
+            <li>
+              <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">G3 Personal Development</a>, Alura & Oracle Next Education, July 2022
             </li>
           </ul>
 
           <h3>UX Design</h3>
           <ul>
             <li>
-              <a href="https://coursera.org/share/bc6b4f61c9e0e7c5c2fb5b0a1951839d" target="_blank" rel="noreferrer">Basics of User Experience Design</a>, Google, August 2022
-            </li>
-            <li>
-              <a href="https://coursera.org/share/28583b51730846c1dcf54affb7a01964" target="_blank" rel="noreferrer">First steps in the UX design process: Empathize, define and ideate</a>, Google, September 2022
-            </li>
-            <li>
-              <a href="https://coursera.org/share/56ee6345b0a9a1fb0451d06d203f0aa8" target="_blank" rel="noreferrer">Create low fidelity page schematics and prototypes</a>, Google, October 2022
-            </li>
-            <li>
-              <a href="https://coursera.org/share/84ca92b9fcce740eac8746d9ffaf8feb" target="_blank" rel="noreferrer">Conduct UX Research</a>, Google, February 2023
-            </li>
-            <li>
-              <a href="https://coursera.org/share/91b8b5122955cf0aa2ce17927d60361f" target="_blank" rel="noreferrer">Create high-fidelity prototypes and designs in Figma</a>, Google, February 2023
+              <a href="https://coursera.org/share/dca15b48093475c55a5a90a079a46991" target="_blank" rel="noreferrer">Responsive web designs in Adobe XD</a>, Google, March 2023
             </li>
             <li>
               <a href="https://coursera.org/share/e43329f63c176a00a5150517508973bc" target="_blank" rel="noreferrer">Design a user experience for a public interest initiative and prepare for the job</a>, Google, March 2023
             </li>
             <li>
-              <a href="https://coursera.org/share/dca15b48093475c55a5a90a079a46991" target="_blank" rel="noreferrer">Responsive web designs in Adobe XD</a>, Google, March 2023
+              <a href="https://coursera.org/share/91b8b5122955cf0aa2ce17927d60361f" target="_blank" rel="noreferrer">Create high-fidelity prototypes and designs in Figma</a>, Google, February 2023
+            </li>
+            <li>
+              <a href="https://coursera.org/share/84ca92b9fcce740eac8746d9ffaf8feb" target="_blank" rel="noreferrer">Conduct UX Research</a>, Google, February 2023
+            </li>
+            <li>
+              <a href="https://coursera.org/share/56ee6345b0a9a1fb0451d06d203f0aa8" target="_blank" rel="noreferrer">Create low fidelity page schematics and prototypes</a>, Google, October 2022
+            </li>
+            <li>
+              <a href="https://coursera.org/share/28583b51730846c1dcf54affb7a01964" target="_blank" rel="noreferrer">First steps in the UX design process: Empathize, define and ideate</a>, Google, September 2022
+            </li>
+            <li>
+              <a href="https://coursera.org/share/bc6b4f61c9e0e7c5c2fb5b0a1951839d" target="_blank" rel="noreferrer">Basics of User Experience Design</a>, Google, August 2022
             </li>
           </ul>
 
@@ -188,44 +182,75 @@
             </li>
           </ul>
 
-          <h3>Cloud Computing</h3>
+          <h3>Cybersecurity and Networking</h3>
           <ul>
             <li>
-              <a href="https://skillshop.exceedlms.com/student/award/vDnJvzSMpiavvrFQbhFKdNvw" target="_blank" rel="noreferrer">Cloud Computing</a>, Google, May 2021
+              <a href="https://learn.microsoft.com/api/credentials/share/es-mx/XimenaToledoRivera-1087/8CC9F02990D11D98?sharingId=99F11AF59A29D8C5" target="_blank" rel="noreferrer">Security, Compliance, and Identity Fundamentals</a>, Microsoft, September 2023
             </li>
             <li>
-              <a href="https://www.credly.com/badges/7cb187b0-6bba-44fe-8fde-6e1dcf8a18c4/public_url" target="_blank" rel="noreferrer">Azure Fundamentals</a>, Microsoft, January 2022
+              <a href="https://credsverse.com/credentials/3a48f680-d6f2-4e5a-b947-7d381368555b" target="_blank" rel="noreferrer">Ethical Hacking | HACKLAB
+              </a>, Hacker Mentor, August 2023
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/ximena-toledo-dev99/" target="_blank" rel="noreferrer">Cybersecurity Labs
+              </a>, Digital Cyber Academy & METABASE Q, April 2023
+            </li>
+            <li>
+              <a href="https://www.credly.com/badges/5b6f47f2-2080-4eca-8777-60f0d548c8e5/public_url" target="_blank" rel="noreferrer">Introduction to Packet Tracer
+              </a>, Cisco Networking Academy, December 2022
+            </li>
+            <li>
+              <a href="https://verified.sertifier.com/en/verify/38669668958764/?ref=email" target="_blank" rel="noreferrer">Ethical Hacking | Red Team Edition 3
+              </a>, Hacker Mentor, March 2023
+            </li>
+            <li>
+              <a href="https://verified.sertifier.com/en/verify/36463906518332?ref=email" target="_blank" rel="noreferrer">Ethical Hacking | Red Team Edition 2
+              </a>, Hacker Mentor, June 2022
+            </li>
+            <li>
+              <a href="https://www.credly.com/badges/b633e914-7500-4f37-830a-c57acb87070c/public_url" target="_blank" rel="noreferrer">Cybersecurity Essentials
+              </a>, Cisco Networking Academy, January 2022
+            </li>
+            <li>
+              <a href="https://www.credly.com/badges/633d9672-d8ef-4079-8570-a19419ae018a/public_url" target="_blank" rel="noreferrer">Introduction to Cybersecurity
+              </a>, Cisco Networking Academy, October 2021
             </li>
           </ul>
 
-          <h3>Cybersecurity and Networking</h3>
+          <h3>Cloud Computing</h3>
           <ul>
-            <li>Cybersecurity at Work Certification issued by the Institute of Cybersecurity (incibe).</li>
-            <li>Introduction to Cybersecurity Certification issued by <a href="https://www.credly.com/badges/633d9672-d8ef-4079-8570-a19419ae018a/public_url" target="_blank" rel="noreferrer">Cisco Networking Academy</a>.</li>
-            <li>Cybersecurity Essentials Certification issued by <a href="https://www.credly.com/badges/b633e914-7500-4f37-830a-c57acb87070c/public_url" target="_blank" rel="noreferrer">Cisco Networking Academy</a>.</li>
-            <li>Introduction to Packet Tracer Certification issued <a href="https://www.credly.com/badges/5b6f47f2-2080-4eca-8777-60f0d548c8e5/public_url" target="_blank" rel="noreferrer">Cisco Networking Academy</a>.</li>
-            <li>Computer Architecture Certification issued by TELMEX.</li>
-            <li>Networking Fundamentals Certification issued by TELMEX.</li>
-            <li>Participation in the <strong>MetabaseQ Hacking Labs</strong>.</li>
-            <li>Ethical Hacking edition 1 issued by <a href="https://verified.sertifier.com/en/verify/36463906518332?ref=email" target="_blank" rel="noreferrer">Hacker Mentor</a></li>
-            <li>Ethical Hacking edition 2 issued by <a href="https://verified.sertifier.com/en/verify/36463906518332?ref=email" target="_blank" rel="noreferrer">Hacker Mentor</a></li>
-            <li>Ethical Hacking edition 3 issued by <a href="https://verified.sertifier.com/en/verify/38669668958764/?ref=email" target="_blank" rel="noreferrer">Hacker Mentor</a></li>
-            <li>Free Ethical Hacking Gamified Course HACKLAB issued by <a href="https://credsverse.com/credentials/3a48f680-d6f2-4e5a-b947-7d381368555b" target="_blank" rel="noreferrer">Hacker Mentor</a></li>
+            <li>
+              <a href="https://www.credly.com/badges/7cb187b0-6bba-44fe-8fde-6e1dcf8a18c4/public_url" target="_blank" rel="noreferrer">Azure Fundamentals</a>, Microsoft, January 2022
+            </li>
+            <li>
+              <a href="https://skillshop.exceedlms.com/student/award/vDnJvzSMpiavvrFQbhFKdNvw" target="_blank" rel="noreferrer">Cloud Computing</a>, Google, May 2021
+            </li>
+          </ul>
+
+          <h3>Mobile Development</h3>
+          <ul>
+            <li>
+              <a href="https://skillshop.exceedlms.com/student/award/ktThwyEZhDjWXGx3HFXkJRcb" target="_blank" rel="noreferrer">Mobile App Development</a>, Google, May 2021
+            </li>
           </ul>
 
           <h3>Finance</h3>
           <ul>
-            <li>Participation in the <strong>Financial Education</strong> program "Cuentas Contigo"
-              by Junior Achievement and Citibanamex.</li>
-              <li>Financial Education Certification issued by CONDUSEF.</strong>.</li>
-              <li>Advanced EXCEL Certification issued by TELMEX.</li>
+            <li>
+              <a href="https://www.linkedin.com/in/ximena-toledo-dev99/" target="_blank" rel="noreferrer">Financial Education "Cuentas Contigo"
+              </a>, JA Mexico & Citibanamex, January 2022
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/ximena-toledo-dev99/" target="_blank" rel="noreferrer">Financial Education
+              </a>, HACIENDA & CONDUSEF, December 2021
+            </li>
           </ul>
-
-          
 
           <h3>Data Base</h3>
           <ul>
-            <li>SQL training with MySQL Certification issued by <a href="https://app.aluracursos.com/degree/certificate/a33979f2-7264-4a61-addf-f188daf221b0" target="_blank" rel="noreferrer">Alura and Oracle</a></li>
+            <li>
+              <a href="https://app.aluracursos.com/emprega-one/profile/xtoledori" target="_blank" rel="noreferrer">SQL with MySQL Server</a>, Alura & Oracle Next Education, December 2022
+            </li>
           </ul>
 
           <h3>Data Science</h3>
